[SELC-4910] feat: remove aggregation to retrieve taxCode field (#499)